--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # PG_ADDRESS = "postgres://postgres:nanonano@172.20.32.176:5432/initial"
+# note : ideal nya parameter bentuk nya key:value yang nantinya bisa di sanding dengan os param level
 DSN = "host=172.20.32.176 user=postgres password=nanonano dbname=librarium port=5432 sslmode=disable TimeZone=Asia/Jakarta"
